--- a/404.html
+++ b/404.html
@@ -20,12 +20,12 @@ html {
 </head>
 <body style="background-color:#2e2e2e;">
 
-<h1 style="text-align: center; font-size:100px; font-family: Candara; color:#005899;"><strong>This page is unavalible!</strong></h1>
-<p style="text-align: center; font-size:35px; font-family: Courier New; color:#00c0c0;">You'll be automatically redirected to the homepage in <strong><span id="count">5</span> seconds...</strong></p>
+<h1 style="text-align: center; font-size:50px; font-family: Candara; color:#005899;"><strong>This page is unavalible!</strong></h1>
+<p style="text-align: center; font-size:15px; font-family: Courier New; color:#00c0c0;">You'll be automatically redirected to the homepage in <strong><span id="count">5</span> seconds...</strong></p>
 <br>
-<h4 style="text-align: center; font-size:20px; font-family: Courier New; color:#ffffff;"><strong>Discord:</strong> Mr Shadow#4898</h4>
+<h4 style="text-align: center; font-size:10px; font-family: Courier New; color:#ffffff;"><strong>Discord:</strong> Mr Shadow#4898</h4>
 
-<script type="text/javascript">
+<!--<script type="text/javascript">
 
 window.onload = function(){
 
@@ -48,7 +48,7 @@ window.onload = function(){
 
 }
 
-</script>
+</script> -->
 
 <meta http-equiv="refresh" content="6;url=https://shadowcraft.site/" />
 
