--- a/404.html
+++ b/404.html
@@ -48,9 +48,9 @@ window.onload = function(){
 
 }
 
-</script> -->
+</script>
 
 <meta http-equiv="refresh" content="6;url=https://shadowcraft.site/" />
-
+-->
 </body>
 </html>
