--- a/404.html
+++ b/404.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="utf-8">
 
-  <title>--</title>
+  <title>Error - 404</title>
   <meta name="description" content="Error Page">
   <meta name="author" content="Toni">
-  <link rel="stylesheet" type="text/css" href="">
+  <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
   <link rel="icon" type="image/png" href="/favicon.png"/>
   </script>
     <style> 
@@ -18,7 +18,7 @@ html {
   </style>
 
 </head>
-<body style="background-color:#2e2e2e;">
+<body>
 
 <h1 style="text-align: center; font-size:50px; font-family: Candara; color:#005899;"><strong>This page is unavalible!</strong></h1>
 <p style="text-align: center; font-size:15px; font-family: Courier New; color:#00c0c0;">You'll be automatically redirected to the homepage in <strong><span id="count">5</span> seconds...</strong></p>
