--- a/404.html
+++ b/404.html
@@ -20,10 +20,10 @@ html {
 </head>
 <body>
 
-<h1 style="text-align: center; font-size:100px;"><strong>This page is unavalible!</strong></h1>
-<p style="text-align: center; font-size:35px;">You'll be automatically redirected to the homepage in <strong><span id="count">5</span> seconds...</strong></p>
+<h1 style="text-align: center; font-size:60px; color:#B5E853;"><strong>This page is unavalible!</strong></h1>
+<p style="text-align: center; font-size:25px; color:#B5E853;">You'll be automatically redirected to the homepage in <strong><span id="count">5</span> seconds...</strong></p>
 <br>
-<h4 style="text-align: center; font-size:20px;"><strong>Discord:</strong> Mr Shadow#4898</h4>
+<h4 style="text-align: center; font-size:20px; color:#B5E853;"><strong>Discord:</strong> Mr Shadow#4898</h4>
 
 <!--<script type="text/javascript">
 
