--- a/404.html
+++ b/404.html
@@ -9,12 +9,11 @@
   <meta name="author" content="Toni">
   <link rel="stylesheet" href="/assets/css/style.scss">
   <link rel="icon" type="image/png" href="/favicon.png"/>
-  </script>
-    <style> 
-html { 
-  background: url("error.jpg") no-repeat center center fixed; 
-  background-size: cover;
-}
+  <style> 
+	html { 
+	  background: url("loading.gif") no-repeat center center fixed; 
+	  background-size: cover;
+	}
   </style>
 
 </head>
