--- a/404.html
+++ b/404.html
@@ -10,8 +10,9 @@
   <link rel="stylesheet" href="/assets/css/style.scss">
   <link rel="icon" type="image/png" href="/favicon.png"/>
   <style> 
-	html { 
-	  background: url("loading.gif") no-repeat center center fixed; 
+	body { 
+	  background-image:url('loading.gif');
+	  background-position: center;
 	  background-size: cover;
 	}
   </style>
