--- a/404.html
+++ b/404.html
@@ -24,8 +24,8 @@
 <p style="text-align: center; font-size:25px; color:#B5E853;">You'll be automatically redirected to the homepage in <strong><span id="count">5</span> seconds...</strong></p>
 <br>
 <h4 style="text-align: center; font-size:20px; color:#B5E853;"><strong>Discord:</strong> Mr Shadow#4898</h4>
-
-<!--<script type="text/javascript">
+<!--
+<script type="text/javascript">
 
 window.onload = function(){
 
