--- a/404.html
+++ b/404.html
@@ -7,12 +7,11 @@
   <title>Error - 404</title>
   <meta name="description" content="Error Page">
   <meta name="author" content="Toni">
-  <link rel="stylesheet" href="/assets/css/style.scss">
+  <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
   <link rel="icon" type="image/png" href="/favicon.png"/>
   <style> 
-	body { 
-	  background-image:url('loading.gif');
-	  background-position: center;
+	html { 
+	  background: url("loading.gif") no-repeat center center fixed; 
 	  background-size: cover;
 	}
   </style>
@@ -24,8 +23,8 @@
 <p style="text-align: center; font-size:25px; color:#B5E853;">You'll be automatically redirected to the homepage in <strong><span id="count">5</span> seconds...</strong></p>
 <br>
 <h4 style="text-align: center; font-size:20px; color:#B5E853;"><strong>Discord:</strong> Mr Shadow#4898</h4>
-<!--
-<script type="text/javascript">
+
+<!--<script type="text/javascript">
 
 window.onload = function(){
 
