--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
   <title>Error - 404</title>
   <meta name="description" content="Error Page">
   <meta name="author" content="Toni">
-  <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+  <link rel="stylesheet" href="/assets/css/style.css">
   <link rel="icon" type="image/png" href="/favicon.png"/>
   <style> 
 	html { 
