--- a/404.html
+++ b/404.html
@@ -9,12 +9,12 @@
   <meta name="author" content="Toni">
   <link rel="stylesheet" href="/assets/css/style.css">
   <link rel="icon" type="image/png" href="/favicon.png"/>
-  <style> 
+  <!--<style> 
 	html { 
 	  background: url("loading.gif") no-repeat center center fixed; 
 	  background-size: cover;
 	}
-  </style>
+  </style> -->
 
 </head>
 <body>
