--- a/404.html
+++ b/404.html
@@ -19,6 +19,7 @@
 </head>
 <body>
 
+<p><img src="loading.gif"></p>
 <h1 style="text-align: center; font-size:60px; color:#B5E853;"><strong>This page is unavalible!</strong></h1>
 <p style="text-align: center; font-size:25px; color:#B5E853;">You'll be automatically redirected to the homepage in <strong><span id="count">5</span> seconds...</strong></p>
 <br>
