--- a/404.html
+++ b/404.html
@@ -14,12 +14,12 @@
 <body>
 
 <p style="text-align: center;"><img src="loading.gif" width="320" height="320" alt="Loading"></p>
-<h1 style="text-align: center; font-size:60px; color:#B5E853;"><strong>This page is unavalible!</strong></h1>
+<h1 style="text-align: center; font-size:60px; color:#B5E853;"><strong>This page is unavailable!</strong></h1>
 <p style="text-align: center; font-size:25px; color:#B5E853;">You'll be automatically redirected to the homepage in <strong><span id="count">5</span> seconds...</strong></p>
 <br>
 <h4 style="text-align: center; font-size:20px; color:#B5E853;"><strong>Discord:</strong> Mr Shadow#4898</h4>
 
-<!--<script type="text/javascript">
+<script type="text/javascript">
 
 window.onload = function(){
 
@@ -45,6 +45,6 @@ window.onload = function(){
 </script>
 
 <meta http-equiv="refresh" content="6;url=https://shadowcraft.site/" />
--->
+
 </body>
 </html>
