--- a/joingame.html
+++ b/joingame.html
@@ -7,7 +7,7 @@
 	<meta property="og:video:type" content="text/html">
 	<meta property="og:video:width" content="900">
 	<meta property="og:video:height" content="506">
-	<meta name="twitter:image" content="https://www.mrman314.tech/minecraft_on_discord/game.png">
+	<meta name="twitter:image" content="https://shadowcraft.site/assets/images/game.png">
 	<meta http-equiv="refresh" content="0;url=https://www.youtube.com/watch?v=dQw4w9WgXcQ">
 </head>
 <body>
